--- a/report/drug_report_draft_2.Rmd
+++ b/report/drug_report_draft_2.Rmd
@@ -59,9 +59,9 @@ The dashboard outlines our health topic in terms of showing how low life expecta
 
 ### How did you gather and synthesise requirements for the project?
 
-We synthesised the information given in the brief by ...
+We synthesised the information given in the brief by taking a number of steps. Firstly, we thoroughly read and digested the contents of the project brief to understand what was being asked of us. Following this, we spent some time researching online and understanding our topic: drug deaths, alcohol deaths and life expectancy in Scotland. Lastly, we had a meeting with the client in order to make sure we understood their requirements to tailor the dashboard towards their needs. 
 
-We prioritised ...
+We prioritised planning, app wireframing and building an MVP app.
 
 ### Motivations for using the data you have chosen
 
@@ -90,16 +90,19 @@ To clean the datasets we standardised the names, assigned NA values to missing o
 
 [**Hint**: This page offers a good starting point for understanding the data structure: https://guides.statistics.gov.scot/article/34-understanding-the-data-structure]
 
-The data on statistics.gov.scot is in the form of ...
+The data on statistics.gov.scot is in the form of Linked Data.
 
-This means ...
+This means the datastore is made up of millions of statements or 'triples'. A 'triple' is a combination of three bits of information that make up a subject - predicate - object arrangement. 
 
-Benefits of storing the data like this are ...
+Benefits of storing the data like this are:
+
+Flexibility: No need to define schema in advance, therefore, altering the data model is easy.
+Efficient Querying: It's faster to retrieve information from a triple store, as opposed to pre-processing unstructured data. Triple stores already represent the required information in a way you can extract.
 
 ### Ethical and legal considerations of the data
 
 [**Hint:** this page contains information on the Open Government License which covers most datasets on statistics.gov.scot: http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/]
 
 
-There are no legal considerations, because the data used is open source and covered by the Open Government Licencse so it is available to anyone.  Ethical considerations are that the data contains death numbers by alcohol and drugs and causes of death by particular drug.  However the data is anonymised so individual cases cannot be identified..  
+There are no legal considerations, because the data used is open source and covered by the Open Government Licencse so it is available to anyone.  Ethical considerations are that the data contains death numbers by alcohol and drugs and causes of death by particular drug.  However the data is anonymised so individual cases cannot be identified. 
 
